@@ -18,6 +18,7 @@ NEWS:
 
 NEW: [features/improvements]
 +Add automatic file backup option to periodically backup buffer contents.
++Add Search/Replace in selection option to find dialog.
 +Patch from (Hasan Aljudy) to show cwd and add e! command to commandbar
 +Automatically show path completion list when doing an e or cd command.
 +Display the documents EOL mode in the status bar.
@@ -27,6 +28,7 @@ NEW: [features/improvements]
 +Add option to start in Normal mode by default when using vi emulation (patch from Hasan Aljudy).
 +Codebrowser syncronizes with caret position. (patch from Igor Dejanovic)
 +Find dialog remembers last position throughout session.
++Add support for the Cobra programming language
 
 BUG FIXES:
 +Fix python autocomp from failing when word was next to a boundry character.
